# docs/swagger.json
@@ -446,7 +446,15 @@
         "api.SessionsResponse": {
             "type": "object",
             "properties": {
+                "deadTimeout": {
+                    "description": "in milliseconds",
+                    "type": "integer"
+                },
                 "from": {
+                    "type": "integer"
+                },
+                "idleTimeout": {
+                    "description": "in milliseconds",
                     "type": "integer"
                 },
                 "sessions": {
